--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!-- Code developed by Boulder Laboratories for Public Safety Communications Research.
-Note: You must change the IP address below in 2 locations within this file! Change the
+Note: You must change the IP addresses below in 5 locations within this file! Change the
 IP address '10.10.10.10' to the IP address of the machine you are running this code on.
 Notice: This code is open source. Use, share, edit, and change at your own risk. 
-This is the main index page that hosts all of the WebRTC demo links. You must have the
-serve_index.js script running in a terminal. Also, you must change the IP addresses below
-to match the IP of the machine running this code. -->
+This is the main index page that hosts all of the WebRTC demo links. -->
 <!DOCTYPE html>
 <html>
 	<head>
